feat: Added pages, components video list and uipdated backend for video crud oops.